--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,6 +38,11 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="Theme.ContractedFarming.Login">
+        <item name="android:windowBackground">@drawable/back_login</item>
+    </style>
+
+
     <style name="WindowAnimationStyle">
         <item name="android:windowEnterAnimation">@anim/slide_in_right</item>
         <item name="android:windowExitAnimation">@anim/slide_out_left</item>
