--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,26 +7,26 @@
     tools:context=".MainActivity">
 
 
-
     <LinearLayout
         android:id="@+id/login_optionlayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 
 
         <Button
             android:id="@+id/login_gotojustview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/continue_without_login"/>
+            android:text="@string/continue_without_login" />
+
         <Button
-            android:text="@string/login_register"
-            android:layout_marginTop="40dp"
             android:id="@+id/login_gotologin"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:text="@string/login_register" />
 
     </LinearLayout>
 
@@ -35,120 +35,122 @@
         android:visibility="gone"
         android:id="@+id/login_loginlayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-<ImageButton
-    android:id="@+id/login_hidelogin"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:background="@android:color/transparent"
-    android:src="@drawable/baseline_arrow_back_ios_new_24"/>
+        android:layout_height="match_parent"
+        android:padding="10dp"
+        >
+
+        <Button
+            android:id="@+id/login_sendotpbutton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/login_phone_no"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:paddingLeft="40dp"
+            android:paddingRight="40dp"
+            android:text="Send OTP"
+            android:textColor="@color/white"
+            android:textSize="15sp" />
 
 
-<TextView
-    android:textColor="?attr/colorPrimary"
-    android:textStyle="bold"
-    android:id="@+id/login_appname"
-    android:textAlignment="center"
-    android:textSize="24sp"
-    android:layout_marginTop="40dp"
-    android:text="@string/app_name"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
-    <ImageView
-        android:id="@+id/login_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="30dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/login_appname"
-        android:src="@drawable/farmer_img">
+        <EditText
+            android:id="@+id/login_phone_no"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_below="@id/login_centerhorizontalline"
+            android:layout_marginLeft="70dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="70dp"
+            android:hint="@string/enter_your_number_here"
+            android:inputType="number"
+            android:textAlignment="center"
+            android:textColor="@color/black" />
 
-    </ImageView>
-
-
-    <ProgressBar
-        android:id="@+id/login_progressbar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/login_sendotpbutton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:visibility="invisible"/>
+        <ImageButton
+            android:id="@+id/login_hidelogin"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/baseline_arrow_back_ios_new_24" />
 
 
-    <RelativeLayout
-        android:id="@+id/login_centerhorizontalline"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true">
+        <ImageView
+            android:id="@+id/login_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_below="@id/login_appname"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:src="@drawable/farmer_img">
 
-    </RelativeLayout>
-
-
-    <TextView
-        android:id="@+id/login_textheading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/login_image"
-        android:padding="20dp"
-        android:text="@string/app_will_send_otp_to_the_entered_number"
-        android:textAlignment="center"
-        android:textColor="#6e6e6e"
-        android:textSize="20sp"
-        android:textStyle="bold">
-
-    </TextView>
+        </ImageView>
 
 
-    <com.hbb20.CountryCodePicker
-        android:id="@+id/login_countrycodepicker"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_above="@id/login_centerhorizontalline"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="100dp"
-        android:layout_marginRight="100dp"
-        android:layout_marginBottom="10dp"
-        app:ccp_areaCodeDetectedCountry="true"
-        app:ccp_autoDetectCountry="true">
-
-    </com.hbb20.CountryCodePicker>
-
-    <EditText
-        android:id="@+id/login_phone_no"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_below="@id/login_centerhorizontalline"
-        android:layout_marginLeft="70dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="70dp"
-        android:hint="@string/enter_your_number_here"
-        android:inputType="number"
-        android:textAlignment="center"
-        android:textColor="@color/black"/>
+        <ProgressBar
+            android:id="@+id/login_progressbar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/login_sendotpbutton"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:visibility="invisible" />
 
 
+        <RelativeLayout
+            android:id="@+id/login_centerhorizontalline"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true">
 
-    <Button
-        android:id="@+id/login_sendotpbutton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/login_phone_no"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:paddingLeft="40dp"
-        android:paddingRight="40dp"
-        android:text="Send OTP"
-        android:textColor="@color/white"
-        android:textSize="15sp"/>
+        </RelativeLayout>
+
+
+        <TextView
+            android:id="@+id/login_appname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:text="@string/app_name"
+            android:textAlignment="center"
+            android:textColor="?attr/colorPrimary"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/login_textheading"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/login_image"
+            android:padding="20dp"
+            android:text="@string/app_will_send_otp_to_the_entered_number"
+            android:textAlignment="center"
+            android:textColor="#6e6e6e"
+            android:textSize="20sp"
+            android:textStyle="bold">
+
+        </TextView>
+
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
             android:layout_below="@id/login_sendotpbutton"
-            android:text="@string/click_on_send_otp_to_login_register"/>
+            android:text="@string/click_on_send_otp_to_login_register"
+            android:textAlignment="center" />
 
+        <com.hbb20.CountryCodePicker
+            android:id="@+id/login_countrycodepicker"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_above="@id/login_centerhorizontalline"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="100dp"
+            android:layout_marginRight="100dp"
+            android:layout_marginBottom="10dp"
+            app:ccp_areaCodeDetectedCountry="true"
+            app:ccp_autoDetectCountry="true">
+
+        </com.hbb20.CountryCodePicker>
 
 
     </RelativeLayout>
