--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -29,7 +29,7 @@
         <item name="colorSurfaceInverse">@color/md_theme_light_inverseSurface</item>
         <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">?attr/colorOnSecondary</item>
         <!-- Customize your theme here. -->
     </style>
 
@@ -38,7 +38,7 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.ContractedFarming.Login">
+    <style name="Theme.ContractedFarming.Login" parent="Theme.ContractedFarming.NoActionBar">
         <item name="android:windowBackground">@drawable/back_login</item>
     </style>
 
