complete till set profile

--- a/app/src/main/res/layout/activity_anonymous.xml
+++ b/app/src/main/res/layout/activity_anonymous.xml
@@ -6,4 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".Anonymous.AnonymousActivity">
 
+
+
+                <ImageButton
+                    android:id="@+id/anonymous_imagebutton_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/baseline_arrow_back_ios_new_24"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Anonymous User"/>
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
