--- a/app/src/main/res/layout/activity_otpauthentication.xml
+++ b/app/src/main/res/layout/activity_otpauthentication.xml
@@ -3,23 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    android:layout_height="match_parent">
 
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:src="@drawable/ic_baseline_message_24"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="80dp"
         android:id="@+id/logo"/>
 
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Enter The OTP Which You Recieved"
+        android:text="@string/enter_the_otp_which_you_received"
         android:textSize="20sp"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -30,23 +29,24 @@
 
 
     <EditText
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/textheading"
         android:layout_marginLeft="120dp"
         android:layout_marginRight="120dp"
-        android:hint="Enter the OTP here...."
+        android:hint="@string/enter_the_otp_here"
         android:textColor="@color/black"
         android:id="@+id/getotp"
         android:textAlignment="center"
+        android:maxLength="6"
         android:inputType="number"/>
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Didn't Recieve ? Change Your Number"
+        android:text="@string/didn_t_receive_change_your_number"
         android:id="@+id/changenumber"
         android:layout_below="@id/getotp"
         android:layout_centerHorizontal="true"
@@ -62,7 +62,7 @@
         android:layout_centerHorizontal="true"
         android:textColor="@color/white"
         android:paddingLeft="40dp"
-        android:text="Verify OTP"
+        android:text="@string/verify_otp"
         android:layout_marginTop="50dp"
         android:paddingRight="40dp"/>
 
