--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,18 +28,24 @@
         <item name="colorOnSurfaceInverse">@color/md_theme_light_inverseOnSurface</item>
         <item name="colorSurfaceInverse">@color/md_theme_light_inverseSurface</item>
         <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
+
+
+        <item name="android:windowLightStatusBar">true</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorOnSecondary</item>
         <!-- Customize your theme here. -->
     </style>
 
     <style name="Theme.ContractedFarming.NoActionBar">
+        <item name="android:textColor">@color/black</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.ContractedFarming.Login" parent="Theme.ContractedFarming.NoActionBar">
-        <item name="android:windowBackground">@drawable/back_login</item>
+    <style name="Theme.ContractedFarming.Login" parent="Theme.ContractedFarming">
+        <item name="android:windowBackground">@drawable/bg_login</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
 
@@ -59,6 +65,5 @@
 
     <style name="Theme.ContractedFarming.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <color name="black">#0000</color>
-    <color name="white">#ffff</color>
+
 </resources>
