--- a/app/src/main/res/layout/activity_set_profile.xml
+++ b/app/src/main/res/layout/activity_set_profile.xml
@@ -21,7 +21,7 @@
         android:layout_centerInParent="true"
         android:layout_marginLeft="70dp"
         android:layout_marginRight="70dp"
-        android:hint="Enter Your Name Here"
+        android:hint="@string/enter_your_name_here"
         android:inputType="textCapWords"
         android:textAlignment="center" />
 
@@ -48,7 +48,7 @@
             android:id="@+id/set_profile_radio_farmer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Farmer" />
+            android:text="@string/farmer" />
 
         <RadioButton
             android:id="@+id/set_profile_radio_agent"
@@ -64,7 +64,7 @@
         android:layout_below="@id/set_profile_name"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:text="Select What is your line of work?" />
+        android:text="@string/select_what_is_your_line_of_work" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -72,7 +72,7 @@
         android:layout_above="@+id/getuserimage"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
-        android:text="Set Your Profile"
+        android:text="@string/set_your_profile"
         android:textColor="?attr/colorPrimary"
         android:textSize="30sp"
         android:textStyle="bold">
@@ -84,7 +84,7 @@
         android:id="@+id/getuserimage"
         android:layout_width="130dp"
         android:layout_height="130dp"
-        android:scaleType="fitXY"
+
         android:layout_above="@+id/set_profile_name"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="80dp"
@@ -93,7 +93,6 @@
 
 
         <ImageView
-            android:padding="15dp"
             android:src="@drawable/baseline_person_add_alt_1_24"
             android:id="@+id/set_profile_image"
             android:layout_width="match_parent"
