--- a/app/src/main/res/layout/popup_agent_profile.xml
+++ b/app/src/main/res/layout/popup_agent_profile.xml
@@ -47,6 +47,7 @@
                     app:cardCornerRadius="100dp">
 
                     <ImageView
+                        android:scaleType="centerCrop"
                         android:id="@+id/popup_agent_image"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
