--- a/app/src/main/res/layout/activity_manager_dashboard.xml
+++ b/app/src/main/res/layout/activity_manager_dashboard.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".Manager.Dashboard.ManagerDashboardActivity">
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="87dp"
+        android:layout_marginTop="356dp"
+        android:text="Welcome Manager to your Dashboard"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
