--- a/app/src/main/res/layout/fragment_farmer_profile_document.xml
+++ b/app/src/main/res/layout/fragment_farmer_profile_document.xml
@@ -1,183 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Admin.FarmerControl.Profile.ProfileDocument1Fragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
-        android:id="@+id/linearLayout5"
+        android:paddingHorizontal="30dp"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:orientation="vertical"
-        android:padding="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:orientation="horizontal"
-            android:weightSum="2">
-
-            <LinearLayout
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal">
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    app:cardCornerRadius="100dp">
-
-                    <ImageView
-                        android:id="@+id/verify_farmer_image"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/farmer_img" />
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-             android:layout_marginTop="25dp"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/verify_farmer_name"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Name Sirname"
-                    android:textSize="20sp"
-                    android:textStyle="bold" />
-
-
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout6"
-        android:layout_width="match_parent"
-        android:layout_height="238dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:layout_marginHorizontal="10dp"
-            android:text="Adhar Card"
-            android:textSize="20sp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/fragment_farmer_document_aadhar_img"
+            android:id="@+id/agent_verification_identity_aadhaar_img"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_marginHorizontal="10dp"
-            android:scaleType="centerCrop" />
-
+            android:layout_height="200dp"
+            />
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:text="Adhar Number -"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/fragment_farmer_document_aadhar_no"
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:layout_marginHorizontal="10dp"
-            android:text="Pan Card"
-            android:textSize="20sp" />
-
-
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/layout6"
-        android:layout_width="402dp"
-        android:layout_height="218dp"
-        android:layout_marginHorizontal="5dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="15dp"
-        android:orientation="vertical"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
-        app:layout_constraintVertical_bias="0.0">
+            android:id="@+id/agent_verification_identity_aadhaar_no"
+            android:textSize="18sp"
+            android:text="@string/aadhaar_no"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
         <ImageView
-            android:id="@+id/verifypan"
+            android:id="@+id/agent_verification_identity_pan_img"
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_marginHorizontal="10dp"
-            android:scaleType="centerCrop" />
-
+            android:layout_height="200dp"/>
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/agent_verification_identity_pan_no"
+            android:textSize="18sp"
+            android:text="@string/pan_card_no"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:text="Pan Number -"
-            android:textSize="20sp" />
+            />
 
 
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="243dp"
-
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="8dp"
-        android:orientation="vertical"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout6">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="25dp"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="5dp"
-            android:text="Passbook"
-            android:textSize="20sp" />
 
         <ImageView
+            android:id="@+id/agent_verification_identity_bank_img"
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:layout_marginHorizontal="10dp"
-            android:scaleType="centerCrop"/>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:text="Passbook Number -"
-            android:textSize="20sp" />
-
+            android:layout_height="200dp"/>
 
     </LinearLayout>
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
-
-
+</ScrollView>
