--- a/app/src/main/res/layout/fragment_manager_profile_farmer.xml
+++ b/app/src/main/res/layout/fragment_manager_profile_farmer.xml
@@ -7,15 +7,10 @@
     tools:context=".Admin.ManagerProfile.Profile.FragmentManagerProfileFarmer">
 
 
-    <LinearLayout
+    <ExpandableListView
+        android:id="@+id/manager_profile_farmer_expandable_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingHorizontal="20dp"
-        android:paddingVertical="10dp"
-        android:orientation="vertical"
-        android:padding="18dp">
-
-    </LinearLayout>
+        android:layout_height="match_parent"/>
 
 
 </FrameLayout>
