--- a/app/src/main/res/layout/prompt_add_plot.xml
+++ b/app/src/main/res/layout/prompt_add_plot.xml
@@ -14,20 +14,6 @@
 
 
 
-    <androidx.cardview.widget.CardView
-        android:elevation="14dp"
-        android:layout_width="match_parent"
-        app:cardBackgroundColor="?attr/colorPrimary"
-        android:layout_height="wrap_content"
-        >
-        <TextView
-            android:layout_margin="10dp"
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Add Plot : "
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-    </androidx.cardview.widget.CardView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -87,22 +73,7 @@
             android:hint="District"/>
 
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_marginBottom="14dp"
-            android:id="@+id/prompt_addplot_state"
-            android:layout_height="wrap_content"
-            android:hint="State"/>
 
-        <EditText
-            android:layout_marginBottom="14dp"
-            android:id="@+id/prompt_addplot_plant"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Plant"
-            android:gravity="start|top"
-            android:inputType="textMultiLine" />
 
 
 
@@ -121,7 +92,14 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:id="@+id/prompt_7_12_url"/>
                 <EditText
+                    android:id="@+id/prompt_add_7_12"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:hint="Enter 7_12 document no."
@@ -152,7 +130,13 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:id="@+id/prompt_8a_url"/>
                 <EditText
+                    android:id="@+id/prompt_add_8a"
                     android:layout_width="250dp"
                     android:layout_height="wrap_content"
                     android:hint="Enter 8a document no."
@@ -171,12 +155,30 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
 
 
-        <Button
+        <LinearLayout
+            android:gravity="center"
+            android:paddingHorizontal="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:backgroundTint="@color/md_theme_dark_errorContainer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cancel"
+                android:layout_marginRight="40dp"
+                android:id="@+id/prompt_cancel_button"
+                android:layout_marginBottom="10dp"/>
+
+        <Button
+            android:layout_marginLeft="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Add Plot"
-            android:id="@+id/farmer_addplot_addbutton"
+            android:id="@+id/prompt_addbutton"
             android:layout_marginBottom="10dp"/>
+        </LinearLayout>
 
 </LinearLayout>
 </ScrollView>
