--- a/app/src/main/res/layout/view_admin_farmer.xml
+++ b/app/src/main/res/layout/view_admin_farmer.xml
@@ -21,6 +21,7 @@
             android:layout_height="60dp"
             app:cardCornerRadius="50dp">
             <ImageView
+                android:scaleType="centerCrop"
                 android:layout_weight="0.1"
                 android:id="@+id/admin_farmer_icon"
                 android:layout_width="60dp"
