--- a/app/src/main/res/layout/activity_admin_message.xml
+++ b/app/src/main/res/layout/activity_admin_message.xml
@@ -64,4 +64,14 @@
 
     </LinearLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:src="@android:drawable/stat_notify_chat"
+        android:id="@+id/admin_addchat_floating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="70dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
