--- a/app/src/main/res/layout/activity_app_info.xml
+++ b/app/src/main/res/layout/activity_app_info.xml
@@ -6,7 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".AppInfo.AppInfoActivity">
 
-    <androidx.viewpager.widget.ViewPager
+
+    <VideoView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+android:id="@+id/info_video"/>
+   <!-- <androidx.viewpager.widget.ViewPager
         android:id="@+id/app_info_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,6 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
     <com.google.android.material.tabs.TabLayout
+        android:background="@android:color/transparent"
         android:id="@+id/app_info_tablayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -23,7 +29,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:tabBackground="@drawable/tab_selector"
         app:tabGravity="center"
-        app:tabIndicatorHeight="0dp" />
+        app:tabIndicatorHeight="0dp" />-->
 
     <Button
         android:id="@+id/app_info_login_button"
