--- a/app/src/main/res/drawable/selected_tab.xml
+++ b/app/src/main/res/drawable/selected_tab.xml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:left="100dp">
-        <rotate
-            android:fromDegrees="-45"
-            android:pivotX="0%"
-            android:pivotY="100%"
-            android:toDegrees="0" >
-            <shape android:shape="rectangle" >
-                <solid android:color="@color/md_theme_dark_primaryContainer" />
+    <item android:top="5dp" android:drawable="@drawable/selected_png_farmer">
 
-            </shape>
-        </rotate>
     </item>
-    <item android:bottom="10dp">
+    <item android:bottom="10dp" android:top="5dp">
         <shape>
             <gradient
                 android:angle="0"
