--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -65,6 +65,7 @@
     </style>
 
     <style name="TabTextStyle">
+        <item name="android:gravity">start</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textSize">12sp</item>
         <item name="android:textStyle">bold</item>
